# maple

./: .env.example  .gitignore  .oxfmtrc.jsonc  CLAUDE.md  DESIGN.md  README.md  knip.json  package.json  skills-lock.json  tinybird.json  turbo.json
.agents/skills/maple-telemetry-conventions/: SKILL.md
.deepsec/: deepsec.config.ts  package.json
.deepsec/data/maple/: SETUP.md  tech.json
.factory/skills/: tinybird
.github/workflows/: ci.yml  deploy-pr-preview.yml  deploy-prd.yml  deploy-stg.yml
.impeccable/: design.json
apps/alerting/: alchemy.run.ts  package.json  wrangler.jsonc
apps/alerting/src/: worker.ts
apps/api/: alchemy.run.ts  autumn.config.ts  package.json  worker-configuration.d.ts  wrangler.jsonc
apps/chat-agent/: package.json
apps/chat-flue/: alchemy.run.ts  package.json  vitest.config.ts
apps/cli/: package.json
apps/ingest/: Cargo.toml  package.json
apps/ingest/benches/: ingest_bench.rs
apps/ingest/src/: autumn.rs  clickhouse_insert_mappings.rs  lib.rs  main.rs  metrics.rs  otel.rs  telemetry.rs
apps/landing/: package.json
apps/local-ui/: package.json
apps/scraper/: package.json
apps/web/: index.html  package.json  vite.config.ts
docs/: attributes.md  browser-sdk.md  geo-ai-search.md  local-mode.md  openrouter-tracing.md  otel-coverage-roadmap.md  persistence.md  self-hosted-clickhouse.md  tinybird-pr-branches.md
examples/effect-todo/: README.md  package.json  turbo.json
lib/clickhouse-builder/: README.md  package.json  tsconfig.json  tsdown.config.ts
lib/effect-sdk/: README.md  package.json
patches/: effect@4.0.0-beta.70.patch
scripts/: gen-ui-embed.ts  generate-clickhouse-insert-mappings.ts  generate-clickhouse-schema-sql.ts  generate-clickhouse-schema.ts  lint-clickhouse-schema.ts  tinybird-pr-branch.ts
(+714 files in other folders)
