[package]
name = "maple-ingest"
version = "0.1.0"
edition = "2021"
default-run = "maple-ingest"

[dependencies]
axum = "0.8.8"
aes-gcm = "0.10"
async-trait = "0.1"
tikv-jemallocator = "0.6"
base64 = "0.22.1"
bytes = "1"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
flate2 = "1.1.5"
hmac = "0.12.1"
dotenvy = "0.15.7"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = [
	"rt-tokio",
	"trace",
	"metrics",
	"experimental_trace_batch_span_processor_with_async_runtime",
	"experimental_metrics_periodicreader_with_async_runtime",
] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = [
	"http-proto",
	"reqwest-client",
	"reqwest-rustls",
	"trace",
	"metrics",
] }
opentelemetry-proto = { version = "0.31.0", features = [
	"gen-tonic",
	"trace",
	"logs",
	"metrics",
	"with-serde",
] }
prost = "0.14.3"
crc32fast = "1.5"
dashmap = "6.1"
num_cpus = "1.17"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "http2", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
tonic = { version = "0.14", features = ["transport"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
url = "2.5.7"
uuid = { version = "1", features = ["v4"] }
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "ingest_bench"
harness = false
